using Microsoft.AspNetCore.Identity;

namespace fastfood.Shared.Models
{
    public class ApplicationUser : IdentityUser
    {
    }
}